[FIX] Health is not restored when you come back from sleep
[FIX] HUGE Speed fix!(something with help labels sending from server to client every time)
[FIX] F4 admin menu having to load a few seconds
[FIX] F4 admin menu being unstable
[FIX] F1 menu not showing part of the help.
[FIX] Player warrants resetting after they were already reset.
[CHANGE] /buypistol to /buy because of the custom items
[CHANGE] rp_max<customteam> to rp_max<customteam>s
[CHANGE] Made admins.lua a bit more idiot proof
[CHANGE] Cooks can now buy food too when hungermod is off
[CHANGE] Letters get removed after 10 minutes, long enoug and prevents them for lying there for like hours.
[CHANGE] Custom shipments without a team entered will make it so that every team can spawn the shipment
[CHANGE] Moved changelog part in init.lua to the changelog.txt file
[CHANGE] The way of saving settings and globals, it now doesn't use text files but SQL
[CHANGE] Admins can touch world props to players can touch world props so players can pick up world items.
[CHANGE] Chiefs can now change to cops by doing /cp
[CHANGE] You will buy a door instantly when there would be only one button in the keys menu
[CHANGE] When there's only one option in the keys menu, it will do that option instantly without opening the menu
[CHANGE] Made all yell,whisper,pm ETC. in colour!!!
[CHANGE] Helplabel structure(now MUCH faster!)
[CHANGE] The chat to use the new system
[CHANGE] Removed /zombiehelp and put it in the F1 menu.
[REMOVE] The easter egg :(
[REMOVE] the player possessor
[REMOVE] refesh_int concommand, it's been replaced by rp_resetallsettings
[REMOVE] Restriction of /dropweapon. You can now drop any weapon.

SVN VERSTION till 150/ 2.3.5:
Updated by: FPtje Falco

[ADD] Cops can arrest sleeping people
[ADD] Admins can disable the No-respawning when changing job with rp_norespawn 
[ADD] Admins can allow/disallow hobo's by doing rp_allowhobos <1/0>