@@ -265,23 +265,9 @@ function SPropProtection.GravGunThings(ply, ent)
 	if not ValidEntity(ent) then return false end
 	if ent:IsVehicle() then return false end
 	if string.find(ent:GetClass(), "func_") then return false end
-	if ply:GetActiveWeapon():GetClass() == "weapon_physcannon" and ply:KeyDown(IN_ATTACK) then
-		local entphys = ent:GetPhysicsObject()
-		if not entphys:IsValid() then return false end
-		local moveable = entphys:IsMoveable()
-		if moveable then
-			entphys:EnableMotion(false)
-			local curpos = ent:GetPos()
-			timer.Simple(.01, entphys.EnableMotion, entphys, true)
-			timer.Simple(.01, entphys.Wake, entphys)
-			timer.Simple(.01, ent.SetPos, ent, curpos)
-		end
-	end
-	
 	for k,v in pairs(SPropProtection.AntiCopy) do
 		if ent:GetClass() == v then return true end
 	end
-	
 	if not SPropProtection.PlayerCanTouch(ply, ent) then
 		return false
 	end
@@ -293,21 +279,10 @@ function SPropProtection.GravGunPunt(ply, ent)
 	if not ValidEntity(ent) then return false end
 	if ent:IsVehicle() then return false end
 	if string.find(ent:GetClass(), "func_") then return false end
-	if ply:KeyDown(IN_ATTACK) then
-		if not ent:GetPhysicsObject() then return false end
-		local entphys = ent:GetPhysicsObject()
-		if entphys:IsValid() and entphys:IsMoveable() then
-			entphys:EnableMotion(false)
-			local curpos = ent:GetPos()
-			timer.Simple(.01, entphys.EnableMotion, entphys, true)
-			timer.Simple(.01, entphys.Wake, entphys)
-			timer.Simple(.01, ent.SetPos, ent, curpos)
-		end
-	end
+	DropEntityIfHeld(ent)
 	return false
 end
 hook.Add("GravGunPunt", "SPropProtection.GravGunPunt", SPropProtection.GravGunPunt)
-
 
 function SPropProtection.CanTool(ply, tr, toolgun)
 	if string.find(toolgun, "duplicator") then
